Bug 366417: Set up scriptloader in the nsDocument ctor to ensure that the blocker-count stays in sync with the notification depth. r/sr=bz