content/html/document/src/nsHTMLContentSink.cpp
@@ -1852,10 +1852,7 @@ HTMLContentSink::DidBuildModel(void)
 
   ScrollToRef();
 
-  nsScriptLoader *loader = mDocument->GetScriptLoader();
-  if (loader) {
-    loader->RemoveObserver(this);
-  }
+  mDocument->ScriptLoader()->RemoveObserver(this);
 
   // Make sure we no longer respond to document mutations.  We've flushed all
   // our notifications out, so there's no need to do anything else here.
